# LifeChase

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  SFMLProject  cmake_install.cmake  series
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp  visual.cpp  visual.hpp  vmath.cpp  vmath.hpp
